setup/shared_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: default
  annotations:
    gateway.envoyproxy.io/service-external-traffic-policy: "Cluster"
  # annotations:
  #   cert-manager.io/cluster-issuer: selfsigned
  #   cert-manager.io/common-name: "Hello World!"
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    # - name: https
    #   protocol: HTTPS
    #   hostname: yu-min.k8s.local
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #     - kind: Secret
    #       name: eg-https
    #   allowedRoutes:        # ← これを追加！
    #     namespaces:
    #       from: All         # ← これが重要！
